INTYG-5673: Jshint, tester och layoutbuggar.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDeprecatedIntygstypeMessage/wcDeprecatedIntygstypeMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDeprecatedIntygstypeMessage/wcDeprecatedIntygstypeMessage.directive.scss
@@ -1,5 +1,5 @@
 wc-deprecated-intygstype-message {
-  display: inline-block;
+  display: flex;
   .alert {
     margin-top: 10px;
     margin-bottom: 10px;
