INTYG-5651: Padding för alertmessage i ue-sjukskrivningar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
@@ -1,5 +1,12 @@
 ue-sjukskrivningar {
 
+
+  wc-alert-message {
+    .alert {
+      margin: 10px 0;
+    }
+  }
+
   .hours-wrapper {
     margin: 1em 0;
     label {
