--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
@@ -39,7 +39,7 @@
     padding: 6px 5px;
   }
   .border {
-    border-color: $wc-color-21;
+    border-color: $wc-color-21 !important;
     box-shadow: 2px 2px 4px 0 $black_12;
   }
 
