--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/datepickerPopup.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/datepickerPopup.template.html
@@ -3,7 +3,7 @@
     <li ng-transclude></li>
     <li ng-if="showButtonBar" class="uib-button-bar">
       <button type="button" class="btn btn-success pull-right uib-close" ng-click="select(datepickerOptions.getActiveDate(), $event)">{{ getText('close') }}</button>
-      <button type="button" class="btn btn-default pull-right uib-clear" ng-click="select(null, $event)">{{ getText('clear') }}</button>
+      <button type="button" class="btn btn-default pull-right uib-clear" ng-click="select(null, $event);datepickerOptions.setActiveDate(null)">{{ getText('clear') }}</button>
     </li>
   </ul>
 </div>
