INTYG-5673: Uppdateringar för ärendhantering protractor

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
@@ -3,7 +3,7 @@
   <div ng-if="canAnswer()" class="arende-svar">
     <!-- Öppna svarapanelen -->
     <button type="button" class="btn btn-success" ng-click="openAnswerPanel()" ng-show="!answerPanelOpen"
-            id="arende-answer-button">
+            id="arende-answer-button-{{arendeSvar.fragaInternReferens}}">
       Svara
     </button>
 
@@ -56,7 +56,7 @@
       <arende-panel-header header-type="svar" show-hantera="true" arende-list-item="arendeListItem" parent-view-state="parentViewState">
       </arende-panel-header>
 
-      <div id="{{panelId}}-{{arendeSvar.internReferens}}-meddelande" class="arende-block-body">
+      <div id="{{panelId}}-arende-svartext-{{arendeSvar.fragaInternReferens}}" class="arende-block-body">
         {{arendeSvar.meddelande}}
         <div ng-if="arendeSvar.answeredWithIntyg">
           <span dynamic-label key="common.arende.svar.besvaradmedintyg"></span><br>
