--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFormLabel/ueFormLabel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFormLabel/ueFormLabel.directive.html
@@ -1,1 +1,1 @@
-<ue-label config="::config" class="ue-del-fraga"></ue-label>
+<ue-label config="::config" class="ue-del-fraga" model="::model"></ue-label>
