INTYG-5728: Uppdaterat besvara komplettering med meddelande att använda nya endpointen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -18,7 +18,7 @@
                 ng-click="openKompletteringDialog()">
           <i class="icon-wc-ikon-comment"></i> Kan inte komplettera</button>
 
-        <a wc-authority request-origin="UTHOPP" ng-click="openUthoppInfoModal()">
+        <a wc-authority request-origin="UTHOPP" ng-click="openUthoppInfoModal()" id="arende-komplettering-uthopp-link">
           <span dynamic-label key="common.arende.komplettering.uthopp.link"></span>
         </a>
       </div>
