INTYG-5816: Endast severity-ikonen skall vara absolut positionerad i wc-alert-message (kan finnas andra material-icons i själva meddelandet)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
@@ -27,11 +27,14 @@ wc-alert-message {
     position: relative;
     padding: 8px 9px 7px 38px;
 
-    .material-icons, .icon-wc-ikon-alert02 {
-      position: absolute;
-      top: 5px;
-      left: 6px;
+    .alert-icon {
+      .material-icons, .icon-wc-ikon-alert02 {
+        position: absolute;
+        top: 5px;
+        left: 6px;
+      }
     }
+
     a:hover {
       color: $wc-color-07;
     }
