--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraMeddelandeConfirmation/wcArendeKompletteraMeddelandeConfirmation.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraMeddelandeConfirmation/wcArendeKompletteraMeddelandeConfirmation.directive.html
@@ -1,4 +1,4 @@
-<div>
+<div id="arende-komplettering-besvarades-med-meddelande-alert">
   <div class="card"
        ng-if="showKompletteringBesvaradesMedMeddelande">
     <wc-alert-message alert-severity="success">Kompletteringsbegäran besvarades med ett meddelande.
