--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
@@ -1,7 +1,7 @@
 <div ng-class="{'ue-del-fraga' : config.htmlClass != 'no-padding'}">
 <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
   <div class="row form-horizontal">
-    <ue-label class="col-sm-12" config="::config.label"></ue-label>
+    <ue-label class="col-sm-12" config="::config.label" model="::model"></ue-label>
     <div class="col-md-2 col-sm-4" data-ng-repeat="choice in modelGetterSetter()">
      <wc-checkbox-wrapper>
         <input ng-attr-id="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}"
