INTYG-5743: Fix efter CR

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
@@ -1,7 +1,7 @@
 <div id="wc-new-person-id-message" ng-show="show">
-  <wc-alert-message alert-severity="warning" id="nyttPersonnummer">
-    <span ng-if="!showAlert" ng-bind-html="message"></span>
-    <span ng-if="showAlert">
+  <wc-alert-message alert-severity="warning" id="nyttPersonnummer" ng-switch="showAlert">
+    <span ng-switch-when="false" ng-bind-html="message"></span>
+    <span ng-switch-when="true">
       <a ng-click="openModal()"><span ng-bind-html="message"></span></a>
     </span>
   </wc-alert-message>
