INTYG-5306: Rättat typo klass på valt datum i datepicker

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
@@ -111,10 +111,10 @@
 
     &.current-day .btn-default {
       border-color: $wc-color-21;
-      font-weight: bold;
     }
 
     .active {
+      @extend %wc-typo-06;
       box-shadow: none;
     }
 
