INTYG-5415: Nytt wc-help direktiv som har både chevron och text för att alltid få placeringen rätt.
Lagt till ett par saknade hjälptexter.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -60,6 +60,7 @@
   @import 'components/wcDropdown/wcDropdown.directive.scss';
   @import 'components/wcExpandableContent/wcExpandableContent.directive.scss';
   @import 'components/wcFragaKomplettering/wcFragaKomplettering.directive.scss';
+  @import 'components/wcHelp/wcHelp.directive.scss';
   @import 'components/wcHelpChevron/wcHelpChevron.directive.scss';
   @import 'components/wcHelpChevronText/wcHelpChevronText.directive.scss';
   @import 'components/wcIntegrationEnhetSelector/_wcIntegrationEnhetSelector.directive.scss';
