--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelp/wcHelp.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelp/wcHelp.directive.scss
@@ -17,33 +17,19 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.wc-help-chevron__arrow_box {
-  position: relative;
-  background: #e9eaed;
-}
-.wc-help-chevron__arrow_box:after {
-  bottom: 100%;
-  left: 35px;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-color: rgba(242, 242, 242, 0);
-  border-bottom-color: #e9eaed;
-  border-width: 10px;
-  margin-left: -15px;
-}
-.wc-help-chevron__margin-bottom {
-  margin-top: 0px;
-}
-.wc-help-chevron__margin-bottom.in {
-  margin-bottom: 15px;
-}
-.wc-help-chevron__textarea {
-  .scrollable-body {
-    padding: 20px;
-    max-height: 190px; // 190 - padding = 140 = 7 text rows
+wc-help {
+  wc-help-chevron-text {
+    .wc-help-chevron__arrow_box {
+      margin-top: 0px;
+      transition: all 0.35s;
+      transition-timing-function: ease;
+    }
+    .wc-help-chevron__arrow_box.in {
+      margin-top: 10px;
+    }
+    .scrollable-body {
+      @extend %wc-typo-07;
+      color: $wc-color-07;
+    }
   }
 }
