INTYG-5589: wc-typo-06 på kompletteringsbegäran rubrik.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
@@ -12,4 +12,8 @@ wc-inline-komplettering {
   .inline-komplettering-text {
     white-space: pre-line;
   }
+
+  .inline-komplettering-heading {
+    @extend %wc-typo-06;
+  }
 }
