INTYG-5836: Gradient hela vägen och olika färg beroende på bakgrund

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -23,7 +23,7 @@
 
 </div>
 
-<wc-support-panel-scrollable-body dom-id="arende-panel-scrollable-body">
+<wc-support-panel-scrollable-body dom-id="arende-panel-scrollable-body" color="28">
 
   <wc-deprecated-intygstype-message message-suffix="arendeheader" intygs-type="{{::viewState.intygProperties.type}}"></wc-deprecated-intygstype-message>
 
