--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss
@@ -26,7 +26,7 @@ wc-support-panel-scrollable-body {
     position: absolute;
     bottom: 0;
     left: 0;
-    padding: 0 20px;
+    padding: 0;
     width: 100%;
     height: $wc-text-fadeout-height;
     pointer-events: none;
@@ -37,6 +37,13 @@ wc-support-panel-scrollable-body {
       width: 100%;
       height: 100%;
       pointer-events: none;
+    }
+
+    &.wc-color-02 div {
+      background-image: linear-gradient(to top, rgba($wc-color-02, 1) 0%, rgba($wc-color-02, 0) 100%);
+    }
+    &.wc-color-28 div {
+      background-image: linear-gradient(to top, rgba($wc-color-28, 1) 0%, rgba($wc-color-28, 0) 100%);
     }
   }
 }
