INTYG-5140: Ändrat så vi har samma namn på maxlength i typehead som andra komponenter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
@@ -7,7 +7,7 @@
              ng-attr-id="{{::config.modelProp|ueDomIdFilter}}"
              ng-model="model[config.modelProp]"
              ng-blur="updateValidation()"
-             maxlength="{{config.maxlength || 3500}}"
+             maxlength="{{config.htmlMaxlength || 3500}}"
              uib-typeahead="value for value in values | filter:$viewValue | limitTo:8"
              typeahead-editable="true">
     </div>
