--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
@@ -97,6 +97,8 @@ uv-patient-grund {
 fk-uv-table,
 uv-table {
   .table {
+    border-radius: 4px;
+    overflow: hidden;
     margin-bottom: 14px;
     > thead > tr > th,
     > thead > tr > td,
@@ -110,37 +112,12 @@ uv-table {
     > thead > tr > th {
       background-color: $wc-color-15;
       color: $wc-color-19;
-      &:first-of-type {
-        border-radius: 4px 0 0 0;
-        border-right: 4px solid $wc-color-15;
-        padding-right: 4px;
-      }
-      &:last-of-type {
-        border-radius: 0 4px 0 0;
-      }
     }
 
     &.table-striped tbody > tr:nth-child(odd) > td,
     > tbody > tr > td {
       background-color: $wc-color-13;
       border-top: 1px solid $wc-color-00;
-    }
-
-    &.table-striped tbody > tr:nth-last-child(-2n+2) > td {
-      border-bottom: 1px solid $wc-color-00;
-    }
-
-    tr:last-of-type td {
-      border-top: 0;
-
-      &:first-of-type {
-        border-radius: 0 0 0 4px;
-        padding-right: 4px;
-        border-right: 4px solid $wc-color-13;
-      }
-      &:last-of-type {
-        border-radius: 0 0 4px 0;
-      }
     }
   }
 }
