INTYG-5673: Ärenden bryter nu långa ord i Chrome.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.scss
@@ -2,6 +2,10 @@
 
   display: block;
 
+  wc-expandable-content {
+    word-break: break-word;
+  }
+
   .keep-newlines, .content {
     white-space: pre-line;
   }
