--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
@@ -1,4 +1,5 @@
 <div class="modal-header">
+  <button type="button" class="close" ng-click="$close()"><i class="material-icons">close</i></button>
   <h3><span dynamic-label key="{{titleId}}"></span></h3>
 </div>
 <div class="modal-body" ng-bind-html="bodyText">
