--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSpinner/wcSpinner.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSpinner/wcSpinner.directive.html
@@ -1,11 +1,11 @@
 <div>
-  <div ng-show="showSpinner" class="wc-spinner">
+  <div ng-if="showSpinner" class="wc-spinner">
     <img aria-labelledby="loading-message" src="/img/ajax-loader.gif" />
     <p id="loading-message">
       <strong><span dynamic-label key="{{ label }}"></span></strong>
     </p>
   </div>
-  <div ng-show="!showSpinner">
+  <div ng-if="!showSpinner">
     <div ng-transclude></div>
   </div>
 </div>
