INTYG-5673: text Kan ej komplettera.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -16,7 +16,7 @@
         <button class="btn btn-primary"
                 id="kan-inte-komplettera"
                 ng-click="openKompletteringDialog()">
-          <i class="icon-wc-ikon-comment"></i> Kan inte komplettera</button>
+          <i class="icon-wc-ikon-comment"></i> Kan ej komplettera</button>
 
         <a wc-authority request-origin="UTHOPP" ng-click="openUthoppInfoModal()" id="arende-komplettering-uthopp-link">
           <span dynamic-label key="common.arende.komplettering.uthopp.link"></span>
