INTYG-5612: Uppdaterat texten om kakor under om webcert

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.scss
@@ -27,6 +27,11 @@
       border-radius: 0;
       box-shadow: none;
 
+      h4 {
+        @extend %wc-typo-14;
+        color: $wc-color-07;
+      }
+
       > .panel-collapse > .panel-body {
         @extend %wc-typo-07;
         color: $wc-color-07;
