--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/kakor-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/kakor-partial.html
@@ -1,15 +1,27 @@
 <p>
-  Så kallade kakor (cookies) används för att underlätta för besökaren på webbplatsen. En kaka är en textfil som lagras på din dator och som innehåller information. Denna webbplats använder så kallade sessionskakor. Sessionskakor lagras temporärt i din dators minne under tiden du är inne på en webbsida. Sessionskakor försvinner när du stänger din webbläsare. Ingen personlig information om dig sparas vid användning av sessionskakor.
+  Vi använder kakor (cookies) för att den här webbplatsen ska fungera på ett bra sätt för dig.
+  Genom att logga in accepterar du vår användning av kakor.
+</p>
+
+<h4>Så här använder vi kakor</h4>
+<p>
+  Den typ av kakor som används på den här webbplatsen kallas för sessionskakor.
+  De lagras temporärt i din dators minne under tiden du är inne på webbplatsen. Sessionskakor sparar ingen personlig information om dig, och de försvinner när du stänger din webbläsare.
 </p>
 <p>
-  Om du inte accepterar användandet av kakor kan du stänga av det via din webbläsares säkerhetsinställningar. Du kan även ställa in webbläsaren så att du får en varning varje gång webbplatsen försöker sätta en kaka på din dator.
+  I Webcert används sessionskakor för att du ska kunna navigera i tjänsten utan att behöva logga in på nytt varje gång du går till en ny sida.
+  De används också för att de filterinställningar du gör ska finnas kvar under hela tiden du är inloggad.
+  För att vara säker på att kakorna inte sparas i din dator efter avslutad session måste du stänga webbläsaren när du har loggat ut.
+</p>
+
+<h4>Undvika kakor</h4>
+<p>
+  Vill du inte acceptera kakor kan din webbläsare ställas in så att du automatiskt nekar till lagring av kakor eller informeras varje gång en webbplats begär att få lagra en kaka.
+  Genom webbläsaren kan också tidigare lagrade kakor raderas. Se webbläsarens hjälpsidor för mer information.
 </p>
 <p>
-  <strong>Observera!</strong> Om du stänger av kakor i din webbläsare kan du inte logga in i Webcert.
+  Väljer du att inte acceptera kakor så kan du inte identifiera dig med e-legitimation i denna e-tjänst.
 </p>
 <p>
-  Allmän information om kakor (cookies) och lagen om elektronisk kommunikation finns på Post- och telestyrelsens webbplats.
-</p>
-<p>
-  <span dynamiclink key="ptsCookiesMerOm"></span>
+  Mer information om kakor kan du finna på <span dynamiclink key="ptsCookiesAbout"></span>.
 </p>
