INTYG-5909: Justerat villkoret för när avbryt-knappen är disabled eller ej

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
@@ -35,8 +35,8 @@
 
         <!-- Avbryt -->
         <button type="button" class="btn btn-default" ng-click="cancelQuestion()"
-                ng-disabled="!isArendeValidForSubmit()"
-                id="cancelArendeBtn">Avbryt</button>
+                ng-disabled="isArendeNonCancellable()"
+                id="cancelArendeBtn">Avbryt XXX</button>
 
         <!-- Status -->
         <span class="arende-draft-status pull-right" ng-switch="arendeNewModel.saveState">
