INTYG-5909: Fixat typo

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
@@ -36,7 +36,7 @@
         <!-- Avbryt -->
         <button type="button" class="btn btn-default" ng-click="cancelQuestion()"
                 ng-disabled="isArendeNonCancellable()"
-                id="cancelArendeBtn">Avbryt XXX</button>
+                id="cancelArendeBtn">Avbryt</button>
 
         <!-- Status -->
         <span class="arende-draft-status pull-right" ng-switch="arendeNewModel.saveState">
