INTYG-5986: Direktiv för att visa sekretess i tabeller

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -71,6 +71,7 @@
   @import 'components/wcPatientStatus/wcPatientStatus.directive.scss';
   @import 'components/wcRadioWrapper/wcRadioWrapper.directive.scss';
   @import 'components/wcSekretessAvliden/wcSekretessAvliden.directive.scss';
+  @import 'components/wcSekretessAvlidenIkon/wcSekretessAvlidenIkon.directive.scss';
   @import 'components/wcSpinner/wcSpinner.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/_arende.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/hantera/arendeHantera.directive.scss';
