INTYG-6008: Laddar ärenden samtidigt som intyget.
Tagit bor isSent (som ej använts någonstans)  från wcSupportPanelManager så den kan köras direkt istället för att vänta på intyget.

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
@@ -1,13 +1,13 @@
 <div ui-view="header"></div>
 
 
-<div class="webcert-workarea-hflex-container centered-constrained-content">
+<div class="webcert-workarea-hflex-container centered-constrained-content" ng-show="!viewState.common.activeErrorMessageKey">
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-bas-ns weak-hidden"
        ng-class="{show: viewState.common.showTemplate}">
     <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
 
 
-      <div ng-show="!viewState.common.activeErrorMessageKey">
+      <div>
         <div id="certificate"
              ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
           <div class="row">
