--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -1,4 +1,4 @@
-<wc-spinner label="common.loading.existing.arenden" show-spinner="!viewState.doneLoading">
+<wc-spinner label="common.loading.existing.arenden" show-spinner="!viewState.doneLoading || !viewState.intygLoaded">
 
 <div class="tab-content-title-row">
 
