--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
@@ -1,9 +1,9 @@
 
 <div ui-view="header"></div>
-<div class="webcert-workarea-hflex-container centered-constrained-content">
+<div class="webcert-workarea-hflex-container centered-constrained-content" ng-show="!viewState.common.activeErrorMessageKey">
 
 
-  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid" ng-show="!viewState.common.activeErrorMessageKey">
+  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
         <!-- fk7263-ns -->
     <div class="{{viewState.common.intyg.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
       <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
