DEVENV: Bakgrundsfärg på content body.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
@@ -38,7 +38,8 @@ body {
   align-self: center;
   width: 100%;
   min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
-  
+  background-color: $wc-color-24;
+
   //when workarea is empty, hide it.
   &:empty {
     display: none;
