--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.html
@@ -4,7 +4,7 @@
     <i class="material-icons md-18">{{isOpen ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</i>
 </div>
 
-<div ng-show="isOpen" class="plate">
+<div ng-show="isOpen" class="plate ng-hide">
     <div ng-repeat="item in items" ng-click="select(item)" ng-switch="useDynamicLabel" ng-attr-id="{{id + '-' + item.id}}">
         <span ng-switch-when="true" dynamic-label key="{{ item.label }}"></span>
         <span ng-switch-when="false">{{ item.label }}</span>
