DEVENV: Fixat buggar hittade av protractortester

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.scss
@@ -18,13 +18,9 @@
  */
 
 wc-intyg-header {
-  wc-spinner {
-    display: block;
+  wc-spinner .wc-spinner {
     height: 83px;
-    .wc-spinner
-    {
-      padding: 10px;
-    }
+    padding: 10px;
   }
 }
 
